2009-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (addDAVItem): A bug was
	introduced in with the fix below, where the metadata would not be
	saved for new items when a listener was not provided. In the case
	of a non-cached calendar, the issue is minor because we lose the
	metadata between sessions. For cached calendars, the presence of a
	listener argument should have no impact.

2009-07-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: addDAVItem fixed to not
	add new/updated items directly to the cached calendar but to
	notify the super calendar's listener instead, as done in multiple
	other places when solving bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=463679. In this case,
	the bug is not totally the same but the underlying mechanism is
	similar. Note that addDAVItem can be used during a refresh
	operation, during which no listener will be provided. We then
	revert to the previous mechanism.

	* src/calendar/providers/storage/calStorageCalendar.js: reverted
	latest patch below as it prevented some operations from being
	completed. Replaced with a better and cleaner fix.

2009-07-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/providers/storage/calStorageCalendar.js
	(adoptItem): avoid a useless notification that triggers a double
	"onAddItem".

	* src/calendar/base/src/calDavCalendar.js: fixed
	getInvitedAttendee to return the first matching result.

	* src/calendar/base/content/calendar-multiday-view.xml:
	deleteItemsFromCalendar fixed to remove occurrences found in the
	column headers.

	* src/calendar/lightning/content/imip-bar.js: adapted code to run
	without acl manager, thereby removing dependency on SOGo
	Connector.

2009-07-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: webdav sync: fixed a
	bug that would continuously refresh the inbox.